syntax = "proto3";
package broadcast;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum OP {
  UNKNOWN = 0;
  BLOCK_LIST = 1;
  BROADCAST_ACK = 2;
  BROADCAST_LIST = 3;
  GET_BLOCKS = 4;
  GET_ROUNDS = 5;
}

message Block {
  uint64 node = 1;
  bytes previous = 2;
  repeated SignedData references = 3;
  uint64 round = 4;
  repeated TransactionData transactions = 5;
}

message BlockList { repeated SignedData blocks = 1; }

message BlockReference {
  bytes hash = 1;
  uint64 node = 2;
  uint64 round = 3;
}

message BroadcastAck { uint64 last = 1; }

message GetBlocks { repeated BlockReference blocks = 1; }

message GetRounds { repeated uint64 rounds = 1; }

message SignedData {
  bytes data = 1;
  bytes signature = 2;
}

message TransactionData {
  bytes data = 1;
  uint64 fee = 2;
}
